# unwrap_or_ai

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: cerebras_demo.rs  devops_monitoring.rs  ecommerce_demo.rs  readme_example.rs  test_cerebras.rs
src/: groq_client.rs  lib.rs  unwrap_or_ai.rs
unwrap_or_ai_proc_macro/: Cargo.toml
unwrap_or_ai_proc_macro/src/: lib.rs
