[package]
name = "unwrap_or_ai"
version = "1.1.1"
edition = "2024"
description = "A Rust library providing AI-powered error handling using procedural macros."
license = "MIT"
repository = "https://github.com/NoodlesOfWrath/unwrap_or_ai/tree/master"

[dependencies]
unwrap_or_ai_proc_macro = "0.1.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
paste = "1.0"
dotenv = "0.15.0"
schemars = { version = "1.0.4", features = ["derive"] }
