[package]
name = "unwrap_or_ai_proc_macro"
version = "0.1.0"
edition = "2024"
description = "A procedural macro to enhance functions with AI-powered error handling using unwrap_or_ai."
license = "MIT"
repository = "https://github.com/NoodlesOfWrath/unwrap_or_ai/tree/master/unwrap_or_ai_proc_macro"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.106", features = ["full"] }
quote = "1.0.40"
